[package]
name = "meteora-fee-router"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_fee_router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[dev-dependencies]
solana-program-test = "~1.16"
solana-sdk = "~1.16"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
spl-token = "~3.5"
bytemuck = "1.14"
