[package]
name = "meteora-fee-router"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_fee_router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
bytemuck = "1.14"
shank = "0.4.5"

[dev-dependencies]
solana-program-test = "~1.18.26"
solana-sdk = "~1.18.26"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
spl-token = "~4.0"
bytemuck = "1.14"
